i seem to be having issues with  constructors being called way too many times

--- a/ex01/Makefile
+++ b/ex01/Makefile
@@ -1,14 +1,14 @@
 CC = c++
 
-CFLAGS = -Wall -Wextra -Werror -std=c++98
+CFLAGS = -Wall -Wextra -Werror -std=c++98 -g3
 
-SRCS = main.cpp ClapTrap.cpp
+SRCS = main.cpp ClapTrap.cpp ScavTrap.cpp
 
 BIN_DIR = bin
 
 OBJS = $(SRCS:%.cpp=$(BIN_DIR)/%.o)
 
-NAME = ClapTrap
+NAME = ScavTrap
 
 all: $(NAME)
 
